prevent nav from jumping on scroll

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ div.resume {
 }
 
 div.resume > h3 {
+  padding-bottom: 107px;
 }
 
 div.nav {
